--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.13",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
+    "emailjs-com": "^2.6.4",
     "hamburger-react": "^2.4.0",
     "next": "10.0.3",
     "next-fonts": "^1.5.1",
